   configurations to be defined just by declaring an ordered set of IComponents.
   A bean defined with an id of ExceptionProcessor will be automatically set as the Router's 
   exceptionProcessor.
 
 * The automatic example/tutorial documentation generation mechanism has been tweaked slightly.
 
 * Tutorial modified slightly (added links to clarify hsql setup for hospital examples).
 
Bug Fixes
=========

SC66: Added support for setting ReplyToQueueName and ReplyToQueueManagerName by MqConnection. 
      Also suppressed the "MQJE001: Completion Code 2, Reason 2033" log statement. 

SC69: Changes in removal of JVM shutdown hook.

SC72: The value for mqContextUserAndPassword was not being set by MqConnection.

SC73: Correct recognition of JVM 1.6 in registration.


=================================================
openadaptor3 production 3.4.2 Release Notes

See licence.txt for Licence information.
=================================================

Date: 18th July 2008
Author: openadaptor Core Team

openadaptor 3.4.2
=======

Connectors
==========

 * JDBCReadConnector & JDBCWriteConnector - preambleSQL and postambleSQL properties
   renamed to afterConnectSql and beforeDisconnectSql, respectively. Setters for 
   old properties have been deprecated.

 * JDBCReadConnector - new properties, preReadSql and postReadSql, get executed
   before the 'main' SQL that returns a result set, and after the result set
   has been read, respectively.

 * JDBCWriteConnector#connect - additional safety checks to allow a subclass 
   to use the connection from this class at the same time not using the sqlWriter.
   
 * JDBCWriteConnector - the two ISQLWriter implementations MapTableWriter and
   MapCallableStatementWriter have moved to the new 
   org.openadaptor.auxil.connector.jdbc.writer.map package. Configurations need
   to be adjusted accordingly:
   
   |------------------------------------------------------------------------------|